<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Mi Telcel</string>
    <string name="hello_world">Hello world!</string>
    <string name="placeholder_lorem_ipsum" translatable="false">Lorem ipsum dolor</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="title_template_step" translatable="false">Step <xliff:g id="step_number">%1$d</xliff:g>: Lorem Ipsum</string>
    <string name="sample_user_msisdn" translatable="false">Subscriber 55 55897898</string>
    <string name="title_activity_dialog_no_connection" translatable="false">DialogNoConnection</string>
    <string name="title_activity_login_or_register">Login Or Register</string>
    <string name="title_activity_tutorial">Tutorial</string>
    <string name="msisdn">Phone number</string>
    <string name="msisdn_not_valid">Invalid phone number</string>
    <string name="already_member">Already a member? Sign in</string>
    <string name="enter_your_msisdn">Enter your phone number</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="log_on">Log On</string>
    <string name="logout">Log Out</string>
    <string name="new_user">New User? Create a New Account</string>
    <string name="password">Password</string>
    <string name="password_current">Current Password</string>
    <string name="password_new">New Password</string>
    <string name="register">Register</string>
    <string name="repeat_password">Repeat password</string>
    <string name="reset_password">Reset Password</string>
    <string name="retry">Retry</string>
    <string name="submit">Submit</string>
    <string name="hello_blank_fragment" translatable="false">Hello, I am a blank fragment</string>
    <string name="home_minutes">"Minutes\n%1$s"</string>
    <string name="home_sms">"SMS\n%1$s"</string>
    <string name="home_data">"Data\n%1$s"</string>
    <string name="confirm_info">"As you have not signed in recently, please provide your password below to confirm the transaction."</string>
    <string name="frequent_check">"Please confirm you want to delete %1$s?"</string>
    <string name="frequent_invalid_input">Please check if you have entered proper contact phone number!</string>
    <string name="frequent_msisdn">Add New Contact ></string>
    <string name="frequent_numbers">Frequent Numbers</string>
    <string name="frequent_numbers_info">Please choose one of the fields to change your frequent numbers. Click on the person to choose from your contacts or on plus to enter number.</string>
    <string name="frequent_numbers_success">You successfully added %1$s to your frequent numbers.</string>
    <string name="frequent_numbers_success_delete">You successfully deleted %1$s from your frequent numbers.</string>
    <string name="recharge">Recharge</string>
    <string name="recharge_check">"Please confirm you want to recharge your account with %1$s%2$.2f."</string>
    <string name="recharge_info">Please choose the amount you want to recharge.</string>
    <string name="recharge_invalid_input">Please check if you have selected proper amount to recharge!</string>
    <string name="recharge_recent_activity">"Recharged your account for %1$s%2$.2f"</string>
    <string name="recharge_success">"Your recharge for %1$s%2$.2f was successful."</string>
    <string name="recharge_5" translatable="false">$5.00</string>
    <string name="recharge_10" translatable="false">$10.00</string>
    <string name="recharge_20" translatable="false">$20.00</string>
    <string name="recharge_50" translatable="false">$50.00</string>
    <string name="transfer_balance">Transfer balance</string>
    <string name="transfer" translatable="false">Transfer</string>
    <string name="transfer_check">"Please confirm you want to transfer %1$s%2$.2f to %3$s."</string>
    <string name="transfer_info">Please choose the amount and the phone number you want to transfer balance. Click on image to choose from your Contacts or enter the phone number in the text-box.</string>
    <string name="transfer_invalid_amount">Transfer amount cannot exceed your available balance. Please check if you have entered the proper amount to transfer balance!</string>
    <string name="transfer_invalid_msisdn">Please check if you have selected proper contact to transfer balance!</string>
    <string name="transfer_msisdn">Phone #</string>
    <string name="transfer_recent_activity">"Transferred %1$s%2$.2f to %3$s"</string>
    <string name="transfer_success">"Your transfer of %1$s%2$.2f to %3$s was successful."</string>
    <string name="account_period" translatable="false">From %1$s to %2$s</string>
    <string name="recent_activity">Recent activity</string>
    <string name="sample_offer" translatable="false">Limited time offer! Buy a internet pack for $19 for 500 MB and receive another 200 MB free! Click here now to purchase this deal!</string>
    <string name="service">Services</string>
    <string name="your_account">Your account</string>
    <string name="your_balance">"Balance: %1$s &gt;"</string>
    <string name="your_offer">Your offer</string>
    <string name="your_service">Your Services</string>
    <string name="change_password_info">Click \'Skip\' to use the PIN code as your password for logging in or enter your preferred password below.</string>
    <string name="change_password_success">Your password was successfully changed, please continue.</string>
    <string name="confirm_pin_info">Please enter the PIN you received to complete the registration process</string>
    <string name="invalid_password">Password must be at least %1$s alpha-numeric characters!</string>
    <string name="login_failed">"Login failed with error code: %1$s"</string>
    <string name="password_does_not_match">Password does not match!</string>
    <string name="pin">PIN Code</string>
    <string name="request_pin_register">Please enter your phone number below to request a PIN to start the registration process</string>
    <string name="request_pin_reset">Please enter your phone number below to request a PIN to start the password reset process</string>
    <string name="user_found">This number is already registered, please login!</string>
    <string name="user_not_found">This number is not registered, please register first!</string>
    <string name="amount">Amount</string>
    <string name="accept">Accept</string>
    <string name="back">Go Back</string>
    <string name="buy">Buy</string>
    <string name="cancel">Cancel</string>
    <string name="check_input">Please check input!</string>
    <string name="close">Close</string>
    <string name="communicate">Communicate</string>
    <string name="confirm">Confirm</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="decline">Decline</string>
    <string name="email">Email</string>
    <string name="email_not_valid">Email not valid</string>
    <string name="loading">Loading&#8230;</string>
    <string name="no_connection_popup">Looks like you are not connected to the internet!</string>
    <string name="no_data">No Data</string>
    <string name="offers">Offers</string>
    <string name="ok">OK</string>
    <string name="other">Other</string>
    <string name="oops">Oops&#8230;</string>
    <string name="please_wait">Please wait&#8230;</string>
    <string name="something_is_wrong">Something is wrong, please try again later.</string>
    <string name="success">Success</string>
    <string name="updated">User updated!</string>
    <string name="warning">Warning</string>
    <string name="communicate_send_sms">Click here to send a SMS to friend!</string>
    <string name="communicate_video_info">You need to wait some time before you can view another video</string>
    <string name="communicate_video_offer">Click here to watch short video and earn balance!</string>
    <string name="communicate_video_timer">%1$02d : %2$02d</string>
    <string name="communicate_watch_video">Watch video</string>
    <string name="communicate_success">"You have earned %1$s%2$.2f for watching the video."</string>
    <string name="package_tag" translatable="false">package_tag</string>
    <string name="installed_tag" translatable="false">installed_tag</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="start">Start Now</string>
    <string name="tutorial_welcome_1" translatable="false">Welcome to</string>
    <string name="tutorial_welcome_2" translatable="false">It\'s fun and easy to earn prizes</string>
    <string name="tutorial_install_1" translatable="false">Install Apps</string>
    <string name="tutorial_install_2" translatable="false">"Install awesome apps and \n earn coins!"</string>
    <string name="tutorial_play_1" translatable="false">Play Games</string>
    <string name="tutorial_play_2" translatable="false">"Play fun games and \n earn more coins!"</string>
    <string name="tutorial_invite_1" translatable="false">Invite Friends</string>
    <string name="tutorial_invite_2" translatable="false">"Invite lots of friends and \n earn lots of coins."</string>
    <string name="tutorial_cash" translatable="false">"When you have enough coins, \n redeem them for cool prizes"</string>
    <string name="tutorial_earn" translatable="false">Earn Coins</string>
    <string name="tutorial_cash_in" translatable="false">Cash In</string>
    <string name="vagroundedstd_black" translatable="false">VAGRoundedStd-Black.otf</string>
    <string name="vagroundedstd_bold" translatable="false">VAGRoundedStd-Bold.otf</string>
    <string name="vagroundedstd_light" translatable="false">VAGRoundedStd-Light.otf</string>
    <string name="vagroundedstd_thin" translatable="false">VAGRoundedStd-Thin.otf</string>
    <string name="navdrawer_item_home">Home</string>
    <string name="navdrawer_item_recent">Recent Activity</string>
    <string name="navdrawer_item_frequent_numbers">Frequent Numbers</string>
    <string name="navdrawer_item_services">Services</string>
    <string name="navdrawer_item_recharge">Recharge</string>
    <string name="navdrawer_item_pastime">Transfer</string>
    <string name="navdrawer_item_offers">Offers</string>
    <string name="navdrawer_item_communicate">Communicate</string>
    <string name="navdrawer_item_help">Help</string>
    <string name="navdrawer_item_tutorial">Tutorial</string>
    <string name="navdrawer_item_terms">Terms &amp; Conditions</string>
    <string name="navdrawer_item_contact">Contact Us</string>
    <string name="navdrawer_item_privacy">Privacy Policy</string>
    <string name="navdrawer_item_password">Change Password</string>
    <string name="navdrawer_item_logout">Logout</string>
    <string name="navdrawer_item_debug" translatable="false">Is Debug?</string>
    <string name="navdrawer_item_error_call" translatable="false">Token not valid</string>
    <string name="tats_app_id" translatable="false">ec29ab43-a5a9-11e5-9e5e-18a90547</string>
    <string name="gcm_sender" translatable="false">1023767124068</string>
    <string name="tats_log_verbose" translatable="false">verbose</string>
    <string name="tats_log_debug" translatable="false">debug</string>
    <string name="tats_log_info" translatable="false">info</string>
    <string name="tats_log_warn" translatable="false">warning</string>
    <string name="tats_log_error" translatable="false">error</string>
    <string name="tats_log_assert" translatable="false">assert</string>
    <string name="tutorial_screen" translatable="false">tutorial</string>
    <string name="tats_env_production" translatable="false">production</string>
    <string name="tats_env_sandbox" translatable="false">sandbox</string>
    <string name="lorem_ipsum" translatable="false">Neque porro quisquam est qui dolorem ipsum quia dolor sit amet</string>
</resources>