<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:orientation="vertical">

    <com.mitelcel.pack.ui.widget.TextViewFolks
        android:id="@+id/label_recharge"
        style="@style/Theme.App.Fragment.Title.TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="@dimen/padding_label"
        android:text="@string/recharge" />

    <com.mitelcel.pack.ui.widget.TextViewFolks
        android:id="@+id/recharge_details"
        style="@style/Theme.App.Fragment.Title.TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:clickable="true"
        android:gravity="center"
        android:padding="20dp"
        android:text="@string/recharge_info"
        android:textSize="16sp" />

    <com.mitelcel.pack.ui.widget.ButtonFolks
        android:id="@+id/recharge_5"
        style="@style/Theme.App.ButtonFolks.Recharge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/recharge_5" />

    <com.mitelcel.pack.ui.widget.ButtonFolks
        android:id="@+id/recharge_10"
        style="@style/Theme.App.ButtonFolks.Recharge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/recharge_10" />

    <com.mitelcel.pack.ui.widget.ButtonFolks
        android:id="@+id/recharge_20"
        style="@style/Theme.App.ButtonFolks.Recharge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/recharge_20" />

    <view
        android:id="@+id/recharge_amount"
        style="@style/Theme.App.Input.EditText"
        class="com.mitelcel.pack.ui.widget.EditTextFolk"
        android:layout_width="96dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margin_large"
        android:layout_marginBottom="@dimen/margin_small"
        android:gravity="end"
        android:hint="@string/other"
        android:inputType="number" />

    <com.mitelcel.pack.ui.widget.ButtonFolks
        android:id="@+id/recharge_other"
        style="@style/Theme.App.ButtonFolks.Recharge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/ok" />

</LinearLayout>
