<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:orientation="vertical">

    <com.mitelcel.pack.ui.widget.TextViewFolks
        android:id="@+id/label_password"
        style="@style/Theme.App.Fragment.Title.TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="@dimen/padding_label"
        android:text="@string/navdrawer_item_password" />

    <com.mitelcel.pack.ui.widget.TextViewFolks
        android:id="@+id/request_details"
        style="@style/Theme.App.TextFolks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margin_medium"
        android:clickable="true"
        android:gravity="center"
        android:padding="@dimen/padding_label"
        android:text="@string/change_password_info"
        android:textSize="16sp" />

    <view
        android:id="@+id/change_password_now"
        style="@style/Theme.App.Input.EditText"
        class="com.mitelcel.pack.ui.widget.EditTextFolk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_huge"
        android:layout_marginRight="@dimen/margin_huge"
        android:layout_marginTop="@dimen/margin_large"
        android:hint="@string/password_current"
        android:visibility="gone" />

    <view
        android:id="@+id/change_password_one"
        style="@style/Theme.App.Input.EditText"
        class="com.mitelcel.pack.ui.widget.EditTextFolk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_huge"
        android:layout_marginRight="@dimen/margin_huge"
        android:layout_marginTop="@dimen/margin_large"
        android:hint="@string/password_new" />

    <view
        android:id="@+id/change_password_two"
        style="@style/Theme.App.Input.EditText"
        class="com.mitelcel.pack.ui.widget.EditTextFolk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_huge"
        android:layout_marginRight="@dimen/margin_huge"
        android:layout_marginTop="@dimen/margin_large"
        android:hint="@string/repeat_password" />

    <com.mitelcel.pack.ui.widget.ButtonFolks
        android:id="@+id/change_password_btn"
        style="@style/Theme.App.ButtonFolks.Positive"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margin_large"
        android:paddingLeft="@dimen/padding_label"
        android:paddingRight="@dimen/padding_label"
        android:text="@string/submit" />

    <com.mitelcel.pack.ui.widget.ButtonFolks
        android:id="@+id/change_password_skip"
        style="@style/Theme.App.ButtonFolks.Negative"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margin_large"
        android:paddingLeft="@dimen/padding_label"
        android:paddingRight="@dimen/padding_label"
        android:text="@string/skip" />

</LinearLayout>