<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background_color">

    <com.mitelcel.pack.ui.widget.TextViewFolks
        android:id="@+id/label_transfer"
        style="@style/Theme.App.Fragment.Title.TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:padding="@dimen/padding_label"
        android:text="@string/transfer_balance" />

    <com.mitelcel.pack.ui.widget.TextViewFolks
        android:id="@+id/transfer_details"
        style="@style/Theme.App.TextFolks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:padding="@dimen/margin_medium"
        android:text="@string/transfer_info"
        android:textSize="16sp" />

    <LinearLayout
        android:id="@+id/transfer_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_small"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/transfer_contact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_tiny"
            android:src="@drawable/ic_person_128"
            android:scaleType="fitXY"
        />
        <view
            android:id="@+id/transfer_msisdn"
            style="@style/Theme.App.Input.EditText"
            class="com.mitelcel.pack.ui.widget.EditTextFolk"
            android:layout_width="250dp"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/margin_tiny"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:hint="@string/transfer_msisdn"
            android:inputType="phone"
            android:maxLength="15" />
    </LinearLayout>

    <com.mitelcel.pack.ui.widget.ButtonFolks
        android:id="@+id/transfer_5"
        style="@style/Theme.App.ButtonFolks.Recharge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/recharge_5" />

    <com.mitelcel.pack.ui.widget.ButtonFolks
        android:id="@+id/transfer_10"
        style="@style/Theme.App.ButtonFolks.Recharge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/recharge_10" />

    <view
        android:id="@+id/transfer_amount"
        style="@style/Theme.App.Input.EditText"
        class="com.mitelcel.pack.ui.widget.EditTextFolk"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margin_medium"
        android:layout_marginBottom="@dimen/margin_small"
        android:gravity="end"
        android:hint="@string/amount"
        android:inputType="numberDecimal" />

    <com.mitelcel.pack.ui.widget.ButtonFolks
        android:id="@+id/transfer_other"
        style="@style/Theme.App.ButtonFolks.Recharge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/ok" />

</LinearLayout>
