<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/transparent"
    tools:context="com.mitelcel.pack.ui.fragment.tutorial.FragTutorialText">

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/tutorial_welcome_1"
        android:textColor="@color/white"
        style="@style/Widget.GenericApp.TextFolks"
        android:gravity="center"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/tutorial_appname"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/yellow_dark"
        style="@style/Widget.GenericApp.Settings.Title.TextFolks"
        android:textSize="30sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/tutorial_welcome_2"
        android:textColor="@color/white"
        style="@style/Widget.GenericApp.TextFolks"
        android:gravity="center"
        android:textSize="20sp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"/>

</LinearLayout>