<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color">

    <RelativeLayout
        android:id="@+id/container_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:paddingLeft="30dp"
        android:paddingRight="30dp">

        <com.mitelcel.pack.ui.widget.ButtonFolks
            android:id="@+id/login_or_register_register"
            style="@style/Theme.App.ButtonFolks.Positive"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:elevation="3dp"
            android:onClick="clickWidgetOnFragment"
            android:text="@string/register" />

        <com.mitelcel.pack.ui.widget.TextViewFolks
            android:id="@+id/login_or_register_already_reg"
            style="@style/Theme.App.Fragment.Title.TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login_or_register_register"
            android:layout_marginTop="100dp"
            android:text="@string/already_member"
            android:textSize="20sp" />

        <com.mitelcel.pack.ui.widget.ButtonFolks
            android:id="@+id/login_or_register_login"
            style="@style/Theme.App.ButtonFolks.Positive"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login_or_register_already_reg"
            android:layout_marginTop="40dp"
            android:onClick="clickWidgetOnFragment"
            android:text="@string/login" />

    </RelativeLayout>

</RelativeLayout>
